2010-11-12  smeghead <smeghead@users.sourceforge.jp>

	* 1.4.00 released.

2010-11-12  smeghead <smeghead@users.sourceforge.jp>

	* be able to hide attachment files.

2010-11-11  smeghead <smeghead@users.sourceforge.jp>

	* changed the encoding README.

2010-10-26  smeghead <smeghead@users.sourceforge.jp>

	* made size of favicon.ico be smaller.

2010-10-08  smeghead <smeghead@users.sourceforge.jp>

	* code comment translations.
	* add 'deleted' column to element_file. upgrade needs execute sql
	statement for each sub project's database like below.
	  $ echo "alter table element_file add column deleted integer not null default 0;" | sqlite3 2.db
	  or
	  $ for db in *.db; do
	      if [ "$db" != "1.db" ]; then
	        echo "alter table element_file add column deleted integer not null default 0;" | sqlite3 $db
	      fi
	    done

2010-09-10  smeghead <smeghead@users.sourceforge.jp>

	* ajdust css of top page edit.

2010-08-29  smeghead <smeghead@users.sourceforge.jp>

	* 1.3.17 released.

2010-08-29  smeghead <smeghead@users.sourceforge.jp>

	* add link-disabled css definition to top.css

2010-08-27  smeghead <smeghead@users.sourceforge.jp>

	* translate code comment.

2010-08-25  smeghead <smeghead@users.sourceforge.jp>

	* fixed a bug that date label of burndown chart are all same date.
	use localtime_r function instead of localtime.

2010-08-23  smeghead <smeghead@users.sourceforge.jp>

	* fixed a bug that date label of burndown chart are all same date.

2010-08-21  smeghead <smeghead@users.sourceforge.jp>

	* 1.3.16 released.

2010-08-21  smeghead <smeghead@users.sourceforge.jp>

	* add SVN connect. when reply, if parameter was not suplied, register last
	posted value.
	* add SVN post-commit perl script.

2010-07-30  smeghead <smeghead@users.sourceforge.jp>

	* 1.3.15 released.

2010-07-30  smeghead <smeghead@users.sourceforge.jp>

	* prepare release.

2010-07-29  smeghead <smeghead@users.sourceforge.jp>
