@@ -1,3 +1,7 @@
+2010-11-18  smeghead <smeghead7@gmail.com>
+
+	* simplified items setting page. many descriptions display at tooltip window, in items setting admin page.
+
 2010-11-12  smeghead <smeghead@users.sourceforge.jp>
 
 	* 1.4.00 released.
